...
            android:text="@string/rewind"
            android:contentDescription="@string/rewind"
            app:icon="@drawable/ic_media_fast_rewind_24"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ibPlayPause"
            style="@style/PlayActivityActionButtons"
            android:contentDescription="@string/Play"
            android:text="@string/Play"
            android:textColor="@android:color/transparent"
            app:icon="@drawable/ic_hourglass_24"
            android:layout_marginHorizontal="6dp"
...
